--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 3000
 URL = 'mongodb+srv://<username>:<password>@<database>.3bit4vb.mongodb.net/odc?retryWrites=true&w=majority'
+JWT_SECRET_KEY= 'secret_key'
+JWT_EXPIRE_TIME= '30d'
