--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 3000
 URL = 'mongodb+srv://ah22:mongodb22@fullstack.3bit4vb.mongodb.net/odc'
-JWT_SECRET_KEY = 'secret_key'
-JWT_EXPIRE_TIME = 5000
+JWT_SECRET_KEY = 'SECRET_KEY'
+JWT_EXPIRE_TIME = '1d'
