email has a problem

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ PORT = 3000
 URL = 'mongodb+srv://ah22:mongodb22@fullstack.3bit4vb.mongodb.net/odc'
 JWT_SECRET_KEY = 'SECRET_KEY'
 JWT_EXPIRE_TIME = '1d'
+
+EMAIL_HOST = "sandbox.smtp.mailtrap.io"
+EMAIL_PORT = 2525
+EMAIL_USER = "22810ac3d81051"
+EMAIL_PASSWORD = "0dd83c520e8f6f"
