all schemas done

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ URL = 'mongodb+srv://ah22:mongodb22@fullstack.3bit4vb.mongodb.net/odc'
 JWT_SECRET_KEY = 'SECRET_KEY'
 JWT_EXPIRE_TIME = '1d'
 
-EMAIL_HOST = "sandbox.smtp.mailtrap.io"
-EMAIL_PORT = 2525
-EMAIL_USER = "db01e58467f41b"
-EMAIL_PASSWORD = "5ab3b6c6e6f723"
+EMAIL_HOST = "smtp.gmail.com"
+EMAIL_PORT = 465
+EMAIL_USER = "hakathon22@gmail.com"
+EMAIL_PASSWORD = "odc_backend"
