--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT = 3000
-URL = 'mongodb+srv://ah22:mongodb22@fullstack.3bit4vb.mongodb.net/odc'
+URL = 'mongodb+srv://ah22: password@fullstack.3bit4vb.mongodb.net/odc'
 JWT_SECRET_KEY = 'SECRET_KEY'
 JWT_EXPIRE_TIME = '1d'
 
 EMAIL_HOST = "smtp.gmail.com"
 EMAIL_PORT = 465
 EMAIL_USER = "hakathon22@gmail.com"
-EMAIL_PASSWORD = "odc_backend"
+EMAIL_PASSWORD = "password"
